--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "4.0.2",
     "react-images": "1.1.7",
     "react-test-renderer": "16.13.1",
+    "style-loader": "1.2.1",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
@@ -43,6 +44,7 @@
     "node": "10"
   },
   "dependencies": {
+    "2gis-maps": "^3.6.1",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
