--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Описание проекта",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open --mode development",
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint && jest"
   },
