--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "7.9.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/polyfill": "7.11.5",
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/register": "7.11.5",
@@ -27,6 +28,7 @@
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0",
     "file-loader": "6.1.0",
+    "ignore-styles": "5.0.1",
     "jest": "26.0.1",
     "less": "3.12.2",
     "less-loader": "5.0.0",
@@ -37,6 +39,7 @@
     "react-test-renderer": "16.13.1",
     "style-loader": "1.2.1",
     "webpack": "4.43.0",
+    "webpack-assets-manifest": "3.1.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
   },
