--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "less": "3.12.2",
     "less-loader": "5.0.0",
     "mini-css-extract-plugin": "0.11.2",
+    "nodemon": "2.0.4",
     "perfectionist": "2.4.0",
     "postcss-loader": "4.0.2",
     "react-images": "1.1.7",
