--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Описание проекта",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode development",
     "start": "webpack-dev-server --open --mode development",
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint && jest"
@@ -35,6 +35,7 @@
     "mini-css-extract-plugin": "0.11.2",
     "nodemon": "2.0.4",
     "perfectionist": "2.4.0",
+    "postcss": "8.1.1",
     "postcss-loader": "4.0.2",
     "react-images": "1.1.7",
     "react-test-renderer": "16.13.1",
