--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Описание проекта",
   "scripts": {
-    "build": "webpack --mode development",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint && jest"
